--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,10 @@
   color: #61dafb;
 }
 
+.site-layout-background {
+  background: #fff;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
