--- a/client/src/App.css
+++ b/client/src/App.css
@@ -32,6 +32,10 @@
   background: #fff;
 }
 
+.pointer {
+  cursor: pointer;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
